[project]
name = "hi-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lookas", email = "i@18kas.com" }
]
requires-python = ">=3.10"
dependencies = [
    "av>=16.0.1",
    "torch>=2.9.1",
]

[project.scripts]
hi-robotics = "hi_robotics:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
